syntax = "proto3";

option java_package = "com.example.protos";

import "google/protobuf/wrappers.proto";

message PrimitiveWrappers {
    google.protobuf.Int32Value int_value = 1;
    google.protobuf.StringValue string_value = 2;

    repeated google.protobuf.Int32Value ints = 3;
    repeated google.protobuf.StringValue strings = 4;
}